unpackaged/main/default/objects/Activity/fields/DateRealisation__c.field-meta.xml
<CustomField>
    <fullName>DateRealisation__c</fullName>
    <label>Date de réalisation</label>
    <type>Date</type>
</CustomField>