unpackaged/main/default/objects/Activity/fields/Lien_devis__c.field-meta.xml
<CustomField>
    <fullName>Lien_devis__c</fullName>
    <label>Lien du devis</label>
    <type>Url</type>
</CustomField>