unpackaged/main/default/objects/Activity/fields/Lien_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Lien_opportunite__c</fullName>
    <label>Lien de l&#39;opportunité</label>
    <type>Url</type>
</CustomField>