unpackaged/main/default/objects/Activity/fields/MigrationRF_c__c.field-meta.xml
<CustomField>
    <fullName>MigrationRF_c__c</fullName>
    <externalId>true</externalId>
    <label>MigrationRF__c</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>