unpackaged/main/default/objects/Activity/fields/Mode_de_communication__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_communication__c</fullName>
    <label>Mode de communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RDV</fullName>
            </value>
            <value>
                <fullName>Visio</fullName>
            </value>
            <value>
                <fullName>Visite</fullName>
            </value>
            <value>
                <fullName>Tel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>