unpackaged/main/default/objects/Activity/fields/Note_de_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Note_de_satisfaction__c</fullName>
    <label>Note de satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ObjetAction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Bon</fullName>
            </value>
            <value>
                <fullName>Moyen</fullName>
            </value>
            <value>
                <fullName>Insuffisant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>