unpackaged/main/default/objects/Activity/fields/Numero_devis__c.field-meta.xml
<CustomField>
    <fullName>Numero_devis__c</fullName>
    <label>Numéro du devis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>