unpackaged/main/default/objects/Activity/fields/Numero_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Numero_opportunite__c</fullName>
    <label>Numéro de l&#39;opportunité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>