unpackaged/main/default/objects/Activity/fields/Objectifs_RDV__c.field-meta.xml
<CustomField>
    <fullName>Objectifs_RDV__c</fullName>
    <formula>Owner:User.Objectifs_RDV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objectifs RDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>