unpackaged/main/default/objects/Activity/fields/ObjetAction__c.field-meta.xml
<CustomField>
    <fullName>ObjetAction__c</fullName>
    <label>Objet de l&#39;action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opération commerciale</fullName>
            </value>
            <value>
                <fullName>Prospection</fullName>
            </value>
            <value>
                <fullName>Découverte</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Synthèse de prestations</fullName>
            </value>
            <value>
                <fullName>Suivi Client</fullName>
            </value>
            <value>
                <fullName>Fichier AAA</fullName>
            </value>
            <value>
                <fullName>Gestion de l&#39;opportunité</fullName>
            </value>
            <value>
                <fullName>Action suite à résiliation</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Prise de contact multi-produits</fullName>
            </value>
            <value>
                <fullName>Relance</fullName>
            </value>
            <value>
                <fullName>Suivi Client Détracteur</fullName>
            </value>
            <value>
                <fullName>Suivi Client Passif</fullName>
            </value>
            <value>
                <fullName>Suivi Client Promoteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>