unpackaged/main/default/objects/Activity/fields/Origine_probleme__c.field-meta.xml
<CustomField>
    <fullName>Origine_probleme__c</fullName>
    <description>Permet de déterminer les causes du mécontentement</description>
    <label>Origine du problème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrée en relation avec Petit Forestier</fullName>
            </value>
            <value>
                <fullName>Négociation et proposition commerciale</fullName>
            </value>
            <value>
                <fullName>Mise_disposition_produit</fullName>
                <label>Mise à disposition du produit</label>
            </value>
            <value>
                <fullName>Equipement camion</fullName>
                <label>Equipement du camion</label>
            </value>
            <value>
                <fullName>Livraison</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Entretien et maintenance</fullName>
            </value>
            <value>
                <fullName>Assistance &amp; relais</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Relation administrative et contractualisation</fullName>
            </value>
            <value>
                <fullName>Récupération camion</fullName>
                <isActive>false</isActive>
                <label>Récupération camion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>