unpackaged/main/default/objects/Activity/fields/Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource__c</fullName>
    <description>it was created just to run the Example provided. It should be removed in the final version.</description>
    <label>Primary Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>