unpackaged/main/default/objects/Activity/fields/Resolution_probleme__c.field-meta.xml
<CustomField>
    <fullName>Resolution_probleme__c</fullName>
    <description>Tache de suivi de détracteur : permet de savoir si suite au rappel du client, son problème est résolu</description>
    <label>Résolution problème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Résolu</fullName>
            </value>
            <value>
                <fullName>En cours de résolution</fullName>
            </value>
            <value>
                <fullName>Escalade Manager</fullName>
                <label>Non résolu: escalade manager</label>
            </value>
            <value>
                <fullName>Non résolu</fullName>
                <isActive>false</isActive>
                <label>Non résolu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>