unpackaged/main/default/objects/Activity/fields/Resultat__c.field-meta.xml
<CustomField>
    <fullName>Resultat__c</fullName>
    <label>Résultat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annulation</fullName>
            </value>
            <value>
                <fullName>A recontacter</fullName>
            </value>
            <value>
                <fullName>Commande</fullName>
            </value>
            <value>
                <fullName>Devis Containers</fullName>
            </value>
            <value>
                <fullName>Devis Meubles</fullName>
            </value>
            <value>
                <fullName>Devis Multi-produits</fullName>
            </value>
            <value>
                <fullName>Devis Vehicules</fullName>
            </value>
            <value>
                <fullName>Echec</fullName>
            </value>
            <value>
                <fullName>NRP</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Présentation</fullName>
            </value>
            <value>
                <fullName>RDV</fullName>
            </value>
            <value>
                <fullName>Réussite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>