unpackaged/main/default/objects/Activity/fields/SF_Maps__c.field-meta.xml
<CustomField>
    <fullName>SF_Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SF Maps</label>
    <type>Checkbox</type>
</CustomField>