unpackaged/main/default/objects/Activity/fields/TECHActivityOne__c.field-meta.xml
<CustomField>
    <fullName>TECHActivityOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Activity One</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>