unpackaged/main/default/objects/Activity/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <formula>if(Year(ActivityDate)=Year(Today()),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year</label>
    <type>Checkbox</type>
</CustomField>