unpackaged/main/default/objects/Activity/fields/Titre__c.field-meta.xml
<CustomField>
    <fullName>Titre__c</fullName>
    <label>Titre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>