unpackaged/main/default/objects/Activity/fields/To_Delete__c.field-meta.xml
<CustomField>
    <fullName>To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>