unpackaged/main/default/objects/Activity/fields/TypeProduits__c.field-meta.xml
<CustomField>
    <fullName>TypeProduits__c</fullName>
    <label>Type de produits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carrosseries</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Meubles</fullName>
            </value>
            <value>
                <fullName>Multi-Produits</fullName>
            </value>
            <value>
                <fullName>Véhicules Frigorifiques</fullName>
            </value>
            <value>
                <fullName>Véhicules Secs</fullName>
            </value>
            <value>
                <fullName>Vente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>