unpackaged/main/default/objects/Activity/listViews/Mes_activites.listView-meta.xml
<ListView>
    <fullName>Mes_activites</fullName>
    <columns>TASK.TYPE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>EVENT.START_DATE_TIME</columns>
    <columns>EVENT.END_DATE_TIME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mes activités</label>
    <language>en_GB</language>
</ListView>