unpackaged/main/default/objects/Activity/listViews/Mes_taches.listView-meta.xml
<ListView>
    <fullName>Mes_taches</fullName>
    <columns>ACTIVITY.TASK</columns>
    <columns>TASK.CLOSED</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mes tâches</label>
    <language>fr</language>
</ListView>